# RAG_Document_AWS

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
config/: settings.py
demo/: compare_chunking.py  invoke_agent.py  run_query.py
docs/: api_reference.md  introduction.md  machine_learning.md  rag_concepts.md
scripts/: cleanup_region.sh  create_opensearch_index.py  create_opensearch_index.sh  deploy_agent.py  smoke_test.py  trigger_ingestion.py  upload_docs.py
src/agent/: __init__.py  bedrock_agent.py
src/api/: app.py
src/chunking/: __init__.py  base.py  factory.py  fixed_size.py  markdown_aware.py  recursive.py  semantic.py  sentence.py  sliding_window.py  token_based.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/rag/: __init__.py  document_loader.py  embeddings.py  generator.py  in_memory_vector_store.py  local_document_loader.py  local_embeddings.py  local_generator.py  retriever.py  vector_store.py
terraform/: .terraform.lock.hcl  bedrock.tf  iam.tf  main.tf  opensearch.tf  outputs.tf  s3.tf  variables.tf  versions.tf
tests/: conftest.py  test_chunking.py  test_graph.py  test_rag.py
